GCA-24 create all services