@@ -3,6 +3,7 @@ package com.gym.crm.app.service.Impl;
 import com.gym.crm.app.domain.dto.TrainingDto;
 import com.gym.crm.app.domain.model.Training;
 import com.gym.crm.app.exception.EntityNotFoundException;
+import com.gym.crm.app.exception.UnacceptableOperationException;
 import com.gym.crm.app.repository.TrainingRepository;
 import com.gym.crm.app.service.TrainingService;
 import org.modelmapper.ModelMapper;
@@ -88,23 +89,48 @@ public class TrainingServiceImpl implements TrainingService {
     }
 
     @Override
-    public TrainingDto addTraining(TrainingDto training) {
-        return null;
+    public TrainingDto addTraining(TrainingDto training) throws UnacceptableOperationException {
+        Training trainingToSave = modelMapper.map(training, Training.class);
+
+        try {
+            trainingRepository.save(trainingToSave);
+        } catch (RuntimeException e) {
+            throw new UnacceptableOperationException("Failed while saving training!");
+        }
+        return modelMapper.map(getTrainingByTrainerAndTraineeAndDate(training.getTrainerId(),
+                training.getTraineeId(), training.getTrainingDate()), TrainingDto.class);
     }
 
     @Override
-    public TrainingDto updateTraining(int trainerId, int traineeId, LocalDate date, TrainingDto trainingDto){
+    public TrainingDto updateTraining(int trainerId, int traineeId, LocalDate date, TrainingDto trainingDto) throws UnacceptableOperationException {
         Training trainingToUpd;
-        try{
-           trainingToUpd  = trainingRepository.findByTrainerAndTraineeAndDate(trainerId, traineeId, date).getFirst();
+
+        try {
+            trainingToUpd = trainingRepository.findByTrainerAndTraineeAndDate(trainerId, traineeId, date).get(0);
         } catch (Exception e) {
             throw new EntityNotFoundException("Training not found!");
         }
-       trainingToUpd.
-        return null;
+        trainingToUpd.setTrainerId(trainingDto.getTrainerId());
+        trainingToUpd.setTraineeId(trainingDto.getTraineeId());
+        trainingToUpd.setTrainingName(trainingDto.getTrainingName());
+        trainingToUpd.setTrainingType(trainingDto.getTrainingType());
+        trainingToUpd.setTrainingDate(trainingDto.getTrainingDate());
+        trainingToUpd.setTrainingDuration(trainingDto.getTrainingDuration());
+
+        try {
+            trainingRepository.save(trainingToUpd);
+        } catch (Exception e) {
+            throw new UnacceptableOperationException("Unable to update training!");
+        }
+        return modelMapper.map(trainingToUpd, TrainingDto.class);
     }
 
     @Override
-    public void deleteTrainingByTrainerAndTraineeAndDate(int trainerId, int traineeId, LocalDate date) {
+    public void deleteTrainingByTrainerAndTraineeAndDate(int trainerId, int traineeId, LocalDate date) throws UnacceptableOperationException {
+        try {
+            trainingRepository.deleteByTrainerAndTraineeAndDate(trainerId, traineeId, date);
+        } catch (Exception e) {
+            throw new UnacceptableOperationException("Unable to delete training!");
+        }
     }
 }
